--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,1 +1,1 @@
-<p>GitHub repository for this workshop <a href="https://github.com/matcornic/hugo-theme-learn"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p>
+<p style="font-size:20px"><a href="https://shashankprasanna.com/pytorch-workshops">[Back to workshops page]</p>
