--- a/static/css/theme-mine.css
+++ b/static/css/theme-mine.css
@@ -2,20 +2,20 @@
 :root{
 
     --MAIN-TEXT-color:#323235; /* Color of text by default */
-    --MAIN-TITLES-TEXT-color: #778ba5; /* Color of titles h2-h3-h4-h5 */
+    --MAIN-TITLES-TEXT-color: #000000; /* Color of titles h2-h3-h4-h5 */
     --MAIN-LINK-color:#4881cd; /* Color of links */
     --MAIN-LINK-HOVER-color:#599af1; /* Color of hovered links */
     --MAIN-ANCHOR-color: #4881cd; /* color of anchors on titles */
 
-    --MENU-HEADER-BG-color:#283e5b; /* Background color of menu header */
+    --MENU-HEADER-BG-color:rgb(240, 240, 255); /* Background color of menu header */
     --MENU-HEADER-BORDER-color:#435c7c; /*Color of menu header border */
 
-    --MENU-SEARCH-BG-color:#202c3c; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BG-color:#e2e2df; /* Search field background color (by default borders + icons) */
     --MENU-SEARCH-BOX-color: #4d6584; /* Override search field border color */
     --MENU-SEARCH-BOX-ICONS-color: #4d6584; /* Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#0a0c0e; /* Background color of the active section and its childs */
-    --MENU-SECTIONS-BG-color:#1c222a; /* Background color of other sections */
+    --MENU-SECTIONS-ACTIVE-BG-color:#333435; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-BG-color:#333435; /* Background color of other sections */
     --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
     --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
