--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,1 +1,1 @@
-<p style="font-size:20px"><a href="https://shashankprasanna.com/pytorch-workshops">[Back to workshops page]</p>
+<p style="font-size:20px"><a href="https://shashankprasanna.com/workshops">[Back to workshops page]</p>
